# systemet-api

./: .gitignore  LICENSE  README.md  Vagrantfile  docker-compose.yml  environment.yml  server.py
db/: create_db  create_db.py  db.schema
systemetapi/: Dockerfile  Main.hs  Model.hs  README.md  __init__.py  config.py  mix.exs  systemetapi.cabal
systemetapi/app/: Main.hs  devel.hs
systemetapi/config/: config.exs
systemetapi/lib/: model.ex  repo.ex  router.ex  systemetapi.ex
systemetapi/lib/models/: product.ex
systemetapi/products/: __init__.py  model.py
systemetapi/src/: App.hs  Model.hs
systemetapi/stores/: __init__.py  model.py
systemetapi/test/: systemetapi_test.exs
systemetapi/yesod-devel/: arargs.txt  ghcargs.txt
