name:          systemetapi
version:       0.0.0
cabal-version: >= 1.8
build-type:    Simple

library
  hs-source-dirs:   src
  exposed-modules:  Model, App
  build-depends:    base >= 4.7 && < 5
                    , sqlite-simple
                    , text
                    , transformers
                    , aeson
                    , scotty >= 0.10.0 && < 0.11
  default-language: Haskell2010

executable          systemetapi
    hs-source-dirs: app
    main-is:        Main.hs
    ghc-options:    -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
    extensions:     OverloadedStrings
    build-depends:  base   >= 4      && < 5
                  , scotty >= 0.10.0 && < 0.11
                  , transformers
                  , wai
                  , wai-extra
                  , aeson
                  , text
                  , systemetapi
